Added point-system model and updated collection request logic. Modified user model, waste type enum, and services. Updated authentication, collection request components, and UI elements.

--- a/RecycleHub/src/app/features/auth/login/login.component.html
+++ b/RecycleHub/src/app/features/auth/login/login.component.html
@@ -8,7 +8,6 @@
     <form (ngSubmit)="onLogin()" [formGroup]="loginForm" class="m-10">
 
       <!-- Email -->
-
       <div class="relative mb-6">
         <label class="flex  items-center mb-2 text-gray-600 text-sm font-medium">Email
           <svg class="ml-1" fill="none" height="7" viewBox="0 0 7 7" width="7" xmlns="http://www.w3.org/2000/svg">
@@ -21,14 +20,14 @@
           <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none ">
           </div>
           <input
-            class="block w-full h-11 pr-5 pl-12 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-transparent border border-gray-300 rounded-full placeholder-gray-400 focus:outline-none"
+            class="block w-full h-11 pr-5 pl-10 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-transparent border border-gray-300 rounded-full placeholder-gray-400 focus:outline-none"
             formControlName="email"
             placeholder="Enter Email"
             type="email">
         </div>
         <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
-          <small *ngIf="loginForm.get('email')?.errors?.['required']">Champ obligatoire</small>
-          <small *ngIf="loginForm.get('email')?.errors?.['email']">Email invalide</small>
+          <small class="text-red-500" *ngIf="loginForm.get('email')?.errors?.['required']">Champ obligatoire</small>
+          <small class="text-red-500" *ngIf="loginForm.get('email')?.errors?.['email']">Email invalide</small>
         </div>
       </div>
       <!-- Password -->
