--- a/RecycleHub/src/app/features/collection-request/dashboard/dashboard.component.html
+++ b/RecycleHub/src/app/features/collection-request/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <div class=" p-4 bg-gradient-to-t from-[#bed47c] to-[#dfe4d3] h-[100vh] w-full">
-  <a routerLink="/create-request" class="mt-6">
+  <a *ngIf="currentUserRole === userRole.Particular" routerLink="/create-request" class="mt-6">
     <app-shared-button
       [disabled]="disabled"
       buttonClasses="ml-18 mt-10 w-52 h-12 shadow-sm rounded-full bg-[#82b53e]  hover:bg-[#3e722b] transition-all duration-700 text-white text-base font-semibold leading-7"
