--- a/RecycleHub/src/app/shared/navbar/navbar.component.html
+++ b/RecycleHub/src/app/shared/navbar/navbar.component.html
@@ -13,8 +13,8 @@
 
         <!-- primary nav -->
         <div class="hidden md:flex items-center space-x-1">
-          <a routerLink="/profile" class="py-5 px-3 text-gray-700 hover:text-gray-900">Features</a>
-          <a routerLink="/requests" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
+          <a routerLink="/requests"  class="py-5 px-3 text-gray-700 hover:text-gray-900">Requests</a>
+          <a  routerLink="/profile" class="py-5 px-3 text-gray-700 hover:text-gray-900">Profile</a>
         </div>
       </div>
 
