--- a/RecycleHub/src/app/features/profile/profile.component.html
+++ b/RecycleHub/src/app/features/profile/profile.component.html
@@ -10,7 +10,7 @@
 
     </div>
     <div class="md:w-2/3 md:pl-8">
-      <h2 class="text-xl font-semibold text-indigo-800 dark:text-white mb-4">About Me</h2>
+      <h2 class="text-xl font-semibold text-indigo- 800 dark:text-white mb-4">About Me</h2>
 
 
       <h2 class="text-xl font-semibold text-indigo-800 dark:text-white mb-4">Contact Information</h2>
